// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeeWarning should not render if not open 1`] = `<DocumentFragment />`;

exports[`FeeWarning should render a warning for a fee that is too HIGH 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1vhnc7q"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Fee Warning
          </h2>
          <div
            class="flex-1"
          >
            <svg
              class="my-8 mx-auto max-w-52"
            >
              warning-light.svg
            </svg>
            <div
              class="flex flex-col overflow-hidden rounded-xl"
            >
              <div
                class="css-pra96q"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    circle-exclamation-mark.svg
                  </svg>
                </div>
                <span>
                  Warning
                </span>
              </div>
              <div
                class="css-1pvpof3"
              >
                You have selected a high fee. Your transaction can be confirmed with a lower fee. Do you wish to continue anyway?
              </div>
            </div>
            <div
              class="mt-4"
            >
              <fieldset
                class="flex flex-col css-1bcidjh"
              >
                <label
                  class="flex w-max cursor-pointer items-center space-x-3"
                >
                  <input
                    class="css-7i915u"
                    color="success"
                    data-testid="FeeWarning__suppressWarning-toggle"
                    name="suppressWarning"
                    type="checkbox"
                  />
                  <span
                    class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    Don’t warn me about fees again
                  </span>
                </label>
              </fieldset>
            </div>
            <div
              class="css-v3xgej"
            >
              <button
                class="css-1jhy6v9"
                data-testid="FeeWarning__cancel-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Cancel
                </div>
              </button>
              <button
                class="css-1bx0hyc"
                data-testid="FeeWarning__continue-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Continue
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FeeWarning should render a warning for a fee that is too LOW 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1vhnc7q"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Fee Warning
          </h2>
          <div
            class="flex-1"
          >
            <svg
              class="my-8 mx-auto max-w-52"
            >
              warning-light.svg
            </svg>
            <div
              class="flex flex-col overflow-hidden rounded-xl"
            >
              <div
                class="css-pra96q"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    circle-exclamation-mark.svg
                  </svg>
                </div>
                <span>
                  Warning
                </span>
              </div>
              <div
                class="css-1pvpof3"
              >
                You have selected a low fee. Your transaction may never be confirmed. Do you wish to continue anyway?
              </div>
            </div>
            <div
              class="mt-4"
            >
              <fieldset
                class="flex flex-col css-1bcidjh"
              >
                <label
                  class="flex w-max cursor-pointer items-center space-x-3"
                >
                  <input
                    class="css-7i915u"
                    color="success"
                    data-testid="FeeWarning__suppressWarning-toggle"
                    name="suppressWarning"
                    type="checkbox"
                  />
                  <span
                    class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    Don’t warn me about fees again
                  </span>
                </label>
              </fieldset>
            </div>
            <div
              class="css-v3xgej"
            >
              <button
                class="css-1jhy6v9"
                data-testid="FeeWarning__cancel-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Cancel
                </div>
              </button>
              <button
                class="css-1bx0hyc"
                data-testid="FeeWarning__continue-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Continue
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
